# edge-kite

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
content/: README.md
docs/: GAIS-PROMPT.md  LANDING-PAGE-REQUIREMENTS.md  event-schema.md
docs/research/: DeepSeek-Comments.md  Edge Analytics for Self-Hosted Platforms.md  GPT-Comments-on-Gemini.md  GPT-Comments.md  GPT-Whitepater.md  Grok-Comments.md  README.md  RFC-001-UNIFIED-EVENT-ARCHITECTURE.md  SYNTHESIS-AI-FEEDBACK.md  Strategic Viability_ Offline-First Edge-Hub Analytics.md
edge/: Cargo.toml
edge/src/: config.rs  db.rs  error.rs  event.rs  main.rs  server.rs  sync.rs
examples/: config.toml
sdk/js/: tracker.js
