[package]
name = "edge-kite"
version = "0.1.0"
edition = "2021"
description = "Lightweight, offline-first analytics agent for edge deployments"
license = "MIT"
repository = "https://github.com/edge-kite/edge-kite"
homepage = "https://edge-kite.com"
keywords = ["analytics", "edge", "iot", "offline-first", "sqlite"]
categories = ["command-line-utilities", "database", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
toml = "0.8"
config = "0.14"

# HTTP client (for sync)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "edge-kite"
path = "src/main.rs"
